--- a/escapeco-all/A-office/index.html
+++ b/escapeco-all/A-office/index.html
@@ -24,7 +24,7 @@
 
 <body>
 	<script>
-$(function(typed) {
+(function() {
   var anim = false;
   function typed(finish_typing) {
       return function(term, message, delay, finish) {
@@ -53,18 +53,22 @@ $(function(typed) {
           }
       };
   }
+
   function length(string) {
       string = $.terminal.strip(string);
       return $('<span>' + string + '</span>').text().length;
   }
+
   // those two functions are helpers that animate prompt and animate the message
   var typed_prompt = typed(function(term, message, prompt) {
       term.set_prompt(message + ' ');
   });
+
   var typed_message = typed(function(term, message, prompt) {
       term.echo(message)
       term.set_prompt(prompt);
-  })});
+  });
+
   function rpc(url, method, params) {
     return new Promise(function(resolve, reject) {
         function success(res) {
@@ -75,43 +79,59 @@ $(function(typed) {
         }
         $.jrpc(url, method, params, success, error);
     });
-}
+  }
 
-function login(username, password) {
-    return rpc("test_rpc.php", "login", [username, password]);
-}
+  function login(username, password) {
+      return rpc("test_rpc.php", "login", [username, password]);
+  }
 
-$('body').terminal(function(command, term) {
-    var cmd = $.terminal.parse_command(command);
-    if (cmd.name === 'cred') {
-        term.push("test_rpc.php", {
-            prompt: function() {
-                return term.login_name(true) + '@ ';
-            },
-            login: function(user, password, callback) {
-                return login(user, password).then(function(token) {
-                    if (token === false) {
-                        throw new Error('Invalid user');
-                    }
-                    return token;
+  $('body').terminal(function(command, term) {
+      var cmd = $.terminal.parse_command(command);
+      if (cmd.name === 'cred') {
+          term.push(["test_rpc.php", {
+            send: function(text) {
+              var parts = text.split('::');
+              console.log(parts);
+              term.clear().echo(parts[0]);
+              if (parts.length === 3) {
+                term.pause();
+                setTimeout(function() {
+                  term.clear().resume();
+                  term.echo('[[' + parts[1] + ']]', true);
+                }, +parts[2]);
+              } else if (parts.length === 2) {
+                term.push((choice) => {
+                  term.pop().clear();
+                  term.echo('[[' + parts[1] + ' ' + choice + ']]', true);
+                }, {
+                  prompt: '? '
                 });
+              }
             }
-        });
-    } else {
-        this.error('Invalid Command.');
-    }
-}, {
-    greetings: "office terminal b22$ GUI",
-    prompt: 'guest@~ ',
-    name: 'login_q',
-    onClear: function(term,typed) {
-        if (this.get_token(true)) {
-            setTimeout(() => typed_message(this, 'Welcome ' + this.login_name(true), 200), 0);
-        } else{
-            setTimeout(() => this.echo("office terminal b22$ GUI"), 0);
-        }
-    }
-});
+          }], {
+              prompt: function() {
+                  return term.login_name(true) + '@ ';
+              },
+              login: function(user, password, callback) {
+                  return login(user, password).then(function(token) {
+                      if (token === false) {
+                          throw new Error('Invalid user');
+                      }
+                      return token;
+                  });
+              }
+          });
+      } else {
+          this.error('Invalid Command.');
+      }
+  }, {
+      greetings: "office terminal b22$ GUI",
+      prompt: 'guest@~ ',
+      name: 'login_q',
+      checkArity: false
+  });
+
+})();
 </script>
 </body>
 </html>
