--- a/escapeco-all/A-office/index.html
+++ b/escapeco-all/A-office/index.html
@@ -90,11 +90,11 @@
       if (cmd.name === 'cred') {
           term.push(["test_rpc.php", {
             send: function(text) {
-              var parts = text.split('::');
-              term.clear();
-              if (parts[0].trim()) {
-                term.echo(parts[0]);
+              if (!text) {
+                return;
               }
+              var parts = text.split('::');
+              term.clear().echo(parts[0]);
               if (parts.length === 3) {
                 term.pause();
                 setTimeout(function() {
@@ -129,6 +129,7 @@
   }, {
       greetings: "office terminal b22$ GUI",
       prompt: 'guest@~ ',
+      invokeMethods: true,
       name: 'login_q',
       checkArity: false
   });
