--- a/jcubic-terminal-escapeco-main/escapeco-all/A-office/index.html
+++ b/jcubic-terminal-escapeco-main/escapeco-all/A-office/index.html
@@ -5,7 +5,7 @@
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jquery.terminal@2.25.1/js/jquery.terminal.min.js"></script>
-	<link rel="stylesheet" href="https://unpkg.com/jquery.terminal/css/jquery.terminal.min.css" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jcubic/jquery.terminal@devel/css/jquery.terminal.min.css" />
 
 	<style type="text/css">
 		.terminal {
