--- a/escapeco-all/A-office/index.html
+++ b/escapeco-all/A-office/index.html
@@ -5,7 +5,7 @@
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jquery.terminal@2.25.1/js/jquery.terminal.min.js"></script>
-	<link rel="stylesheet" href="https://unpkg.com/jquery.terminal/css/jquery.terminal.min.css" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jcubic/jquery.terminal@devel/css/jquery.terminal.min.css" />
 
 	<style type="text/css">
 		.terminal,
@@ -25,57 +25,18 @@
 <body>
 	<script>
 (function() {
-  var anim = false;
-  function typed(finish_typing) {
-      return function(term, message, delay, finish) {
-          anim = true;
-          var prompt = term.get_prompt();
-          var c = 0;
-          if (message.length > 0) {
-              term.set_prompt('');
-              var new_prompt = '';
-              var interval = setInterval(function() {
-                  var chr = $.terminal.substring(message, c, c+1);
-                  new_prompt += chr;
-                  term.set_prompt(new_prompt);
-                  c++;
-                  if (c == length(message)) {
-                      clearInterval(interval);
-                      // execute in next interval
-                      setTimeout(function() {
-                          // swap command with prompt
-                          finish_typing(term, message, prompt);
-                          anim = false
-                          finish && finish();
-                      }, delay);
-                  }
-              }, delay);
-          }
-      };
-  }
-
-  function length(string) {
-      string = $.terminal.strip(string);
-      return $('<span>' + string + '</span>').text().length;
-  }
-
-  // those two functions are helpers that animate prompt and animate the message
-  var typed_prompt = typed(function(term, message, prompt) {
-      term.set_prompt(message + ' ');
-  });
-
-  var typed_message = typed(function(term, message, prompt) {
-      term.echo(message)
-      term.set_prompt(prompt);
-  });
 
   function rpc(url, method, params) {
     return new Promise(function(resolve, reject) {
         function success(res) {
-            resolve(res.result);
+            if (res.error) {
+                reject(res.error);
+            } else {
+                resolve(res.result);
+            }
         }
-        function error(res) {
-            reject(res.error.message);
+        function error(jqXHR, err, message) {
+            reject({ message: message });
         }
         $.jrpc(url, method, params, success, error);
     });
@@ -94,7 +55,7 @@
                 return;
               }
               var parts = text.split('::');
-              term.clear().typing('echo', 400, parts[0], function() {
+              term.clear().typing('echo', 200, parts[0], function() {
                   if (parts.length === 3) {
                       term.pause();
                       setTimeout(function() {
